[gd_scene load_steps=11 format=3 uid="uid://dviqbc0xl5wt7"]

[ext_resource type="Script" path="res://Scene/SwampLevel1/barrel_of_oil_3p/barrel_of_oil_3p.gd" id="1_axsfb"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_iffet"]
load_path = "res://.godot/imported/barrel_of_oil.png-0a2619fd8f53d2638c34bd29fdf29505.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f7w0r"]
size = Vector2(217, 80)

[sub_resource type="Animation" id="Animation_pfhy4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BarrelOfOil:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 2.5)]
}

[sub_resource type="Animation" id="Animation_3dk06"]
resource_name = "water_animation"
length = 5.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BarrelOfOil:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, -1), Vector2(0.5, 4), Vector2(0.5, -1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6q16s"]
_data = {
"RESET": SubResource("Animation_pfhy4"),
"water_animation": SubResource("Animation_3dk06")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ltf4"]
size = Vector2(217, 20)

[sub_resource type="Animation" id="Animation_bwua1"]
resource_name = "Animation_Player_on_barrel"
length = 2.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../BarrelOfOil:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 2.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 10), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 2.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, -1), Vector2(0.5, 9), Vector2(0.5, -1)]
}

[sub_resource type="Animation" id="Animation_cd103"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../BarrelOfOil:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, -1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ey3g3"]
_data = {
"Animation_Player_on_barrel": SubResource("Animation_bwua1"),
"RESET": SubResource("Animation_cd103")
}

[node name="barrel_of_oil_3p" type="AnimatableBody2D"]
position = Vector2(0, 5)
collision_mask = 2
script = ExtResource("1_axsfb")

[node name="BarrelOfOil" type="Sprite2D" parent="."]
rotation = -1.5708
scale = Vector2(0.7, 0.85)
texture = SubResource("CompressedTexture2D_iffet")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -1)
shape = SubResource("RectangleShape2D_f7w0r")
debug_color = Color(0.686275, 0.584314, 0.286275, 0.180392)

[node name="Animation_oil" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6q16s")
}
autoplay = "water_animation"

[node name="Area_player" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_player"]
position = Vector2(0.5, -33)
shape = SubResource("RectangleShape2D_0ltf4")
debug_color = Color(0.717647, 0.384314, 0.745098, 0.419608)

[node name="Animation_Player_on_barrel" type="AnimationPlayer" parent="Area_player"]
libraries = {
"": SubResource("AnimationLibrary_ey3g3")
}

[node name="Timer" type="Timer" parent="Area_player"]
one_shot = true

[connection signal="body_entered" from="Area_player" to="." method="_on_area_player_body_entered"]
[connection signal="timeout" from="Area_player/Timer" to="." method="_on_timer_timeout"]
